--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <!-- HdNum16@HdXiangqi_v2.apk -->
-        <a href="assets/dump.txt" download>
+        <a href="assets/HdNum16@HdXiangqi_v2.apk" download>
             <span>Download APK</span>
         </a>
     </div>
