--- a/index.html
+++ b/index.html
@@ -8,18 +8,66 @@
     <title>HdNum16</title>
 
     <link rel="stylesheet" href="src/css/styles.css" />
+
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,200" />
 </head>
 
 <body>
-    <div class="header">
-        <h1>HdNum16@LandingPage</h1>
-    </div>
-
     <div class="container">
-        <!-- HdNum16@HdXiangqi_v2.apk -->
-        <a href="assets/dump.txt" download>
-            <span>Download APK</span>
-        </a>
+        <div class="projects">
+            <div class="projects-container">
+                <div class="download-buttons">
+                    <a href="assets/HdNum16@HdXiangqi_v2.apk" class="download-button" data-filesize="apk" download>
+                        <span class="material-symbols-outlined">
+                            apk_install
+                        </span>
+                        <span>
+                            <!-- Download APK -->
+                            HdNum16@HdXiangqi_v2.apk
+                        </span>
+                    </a>
+
+                    <a href="https://www.instagram.com/p/ClPlUbcAt1z/" class="download-button">
+                        <span class="material-symbols-outlined">
+                            home
+                        </span>
+                        <span>
+                            Web Version (Coming soon)
+                        </span>
+                    </a>
+                </div>
+
+                <div class="projects-intro">
+                    <span class="app-name">HdXiangqi - luyện tập cờ tướng mỗi ngày</span>
+                </div>
+            </div>
+        </div>
+
+        <div id="grid" class="preview">
+            <div id="image-1" class="image-container">
+                <img src="assets/HdXiangqi/Home.png" class="image" />
+            </div>
+            <div id="image-2" class="image-container">
+                <img src="assets/HdXiangqi/Play.png" class="image" />
+            </div>
+            <div id="image-3" class="image-container">
+                <img src="assets/HdXiangqi/Analyze.png" class="image" />
+            </div>
+            <div id="image-4" class="image-container">
+                <img src="assets/HdXiangqi/Watch.png" class="image" />
+            </div>
+            <div id="image-5" class="image-container">
+                <img src="assets/HdXiangqi/Opening.png" class="image" />
+            </div>
+            <div id="image-6" class="image-container">
+                <img src="assets/HdXiangqi/Book.png" class="image" />
+            </div>
+        </div>
     </div>
 
     <script src="src/js/app.js"></script>
