confirm index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,27 @@
 
 <body>
     <div class="container">
-        <!-- HdNum16@HdXiangqi_v2.apk -->
-        <a href="assets/dump.txt" download>
-            <span>Download APK</span>
-        </a>
-    </div>
+        <div class="projects">
+            <div class="projects-container">
+                <div class="download-buttons">
+                    <a href="assets/HdNum16@HdXiangqi_v2.apk" class="download-button" data-filesize="apk" download>
+                        <span class="material-symbols-outlined">
+                            apk_install
+                        </span>
+                        <span>
+                            <!-- Download APK -->
+                            HdNum16@HdXiangqi_v2.apk
+                        </span>
+                    </a>
+                    <a href="https://www.instagram.com/p/ClPlUbcAt1z/" class="download-button">
+                        <span class="material-symbols-outlined">
+                            home
+                        </span>
+                        <span>
+                            Web Version (Coming soon)
+                        </span>
+                    </a>
+                </div>
 
                 <div class="projects-intro">
                     <span class="app-name">HdXiangqi - luyện tập cờ tướng mỗi ngày</span>
