--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             HdNum16@HdXiangqi_v2.apk
                         </span>
                     </a>
-                    <a href="https://www.instagram.com/p/ClPlUbcAt1z/" class="download-button">
+                    <a class="download-button">
                         <span class="material-symbols-outlined">
                             home
                         </span>
