--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                             HdNum16@HdXiangqi_v2.apk
                         </span>
                     </a>
-                    <a class="download-button">
+                    <a href="https://resplendent-dragon-e2da5f.netlify.app/" class="download-button">
                         <span class="material-symbols-outlined">
                             home
                         </span>
                         <span>
-                            Web Version (Coming soon)
+                            Web Version
                         </span>
                     </a>
                 </div>
