update web link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             HdNum16@HdXiangqi_v2.apk
                         </span>
                     </a>
-                    <a href="https://resplendent-dragon-e2da5f.netlify.app/" class="download-button">
+                    <a href="https://hdxiangqi.netlify.app/" class="download-button">
                         <span class="material-symbols-outlined">
                             home
                         </span>
